--- a/games/memory/styles.css
+++ b/games/memory/styles.css
@@ -1,63 +1,63 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
-    display: flex;
-    background: #3c3fb1;
+  height: 100vh;
+  display: flex;
+  background: #3c3fb1;
 }
 
 .memory-game {
-    width: 800pt;
-    height: 800pt;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    perspective: 1000pt;
+  width: 800pt;
+  height: 800pt;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  perspective: 1000pt;
 }
 
 .memory-card {
-    width: calc(25% - 10pt);
-    height: calc(33.333% - 10pt);
-    margin: 5pt;
-    position: relative;
-    transform: scale(1);
-    transform-style: preserve-3d;
-    transition: transform .5s;
+  width: calc(25% - 10pt);
+  height: calc(33.333% - 10pt);
+  margin: 5pt;
+  position: relative;
+  transform: scale(1);
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
 }
 
 .memory-card:active {
-    transform: scale(0.97);
-    transition: transform .2s;
+  transform: scale(0.97);
+  transition: transform 0.2s;
 }
 
 .memory-card.flip {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .front-face,
 .back-face {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    position: absolute;
-    border-radius: 15pt;
-    background: #9ec9ec;
-    backface-visibility: hidden;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  position: absolute;
+  border-radius: 15pt;
+  background: #9ec9ec;
+  backface-visibility: hidden;
 }
 
 .back-face {
-    object-fit: cover;
+  object-fit: cover;
 }
 .front-face {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .huge-links {
-    font-size: xx-large;
-    color: #9ec9ec;
-    padding: 10pt;
+  font-size: xx-large;
+  color: #9ec9ec;
+  padding: 10pt;
 }
